Update to index, adding padding for legends
Added padding for Legend cards for better visuals on mobile devices.

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                             <span>{{legendPick}}</span> 
                             
                             <div class="row justify-content-center">
-                                <div class="col-sm-4 col-7" ng-repeat="legend in legends | orderBy:'pickNo'" ng-show="legend.picked" >
+                                <div class="col-sm-4 col-7 pb-2" ng-repeat="legend in legends | orderBy:'pickNo'" ng-show="legend.picked" >
                                     <div id="specialCard" class="card">
                                         <img class="card-img-top" src="{{legend.thumb}}">
                                         <div class="card-img-overlay px-3 py-0">
