--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                             </div>
                            
                             
-                            <div class="row justify-content-center" style="width: 80vw">
+                            <div class="row justify-content-center">
                                 <div class="col-sm-4 col-7 pb-2" ng-repeat="legend in legends | orderBy:'pickNo'" ng-show="legend.picked" >
                                     <div id="specialCard" class="card">
                                         <img class="card-img-top" src="{{legend.thumb}}">
